--- a/index.html
+++ b/index.html
@@ -581,16 +581,25 @@
             </div>
         </div>
         <hr class="mt-4 mb-2">
-        <div class="copyright-section d-flex align-items-center">
-            <p class="font-size">© Copyright 2025 HealthMonitor. All rights reserved</p>
-            <p class="ms-md-auto me-3 font-size">Share on socials</p>
-            <div class="social-media">
-                <img src="assets/icons/X.svg" alt="img" class="x-share-btn">
-                <img src="assets/icons/Facebook.svg" alt="img" class="fb-share-btn">
-                <a href="https://www.instagram.com/">
-                    <img src="assets/icons/Instagram.svg" alt="img">
-                </a>
-                <img src="assets/icons/linkedin.svg" alt="img" id="linkedin-share-btn" class="linkedin-share-btn">
+        <div class="">
+            <div class="copyright-section d-flex align-items-center">
+                <p class="font-size">© Copyright 2025 HealthMonitor. All rights reserved</p>
+                <p class="ms-md-auto me-3 font-size">Share on socials</p>
+                <div class="social-media">
+                    <img src="assets/icons/X.svg" alt="img" class="x-share-btn">
+                    <img src="assets/icons/Facebook.svg" alt="img" class="fb-share-btn">
+                    <a href="https://www.instagram.com/">
+                        <img src="assets/icons/Instagram.svg" alt="img">
+                    </a>
+                    <img src="assets/icons/linkedin.svg" alt="img" id="linkedin-share-btn" class="linkedin-share-btn">
+                </div>
+            </div>
+            <div class="develop-by w-25 ms-auto">
+                <p>
+                    Developed by <a href="https://nxtgenwebsites.com/" target="_blank"
+                        class="text-noWrap link-secondary hoverable-link">Nxt
+                        Gen Websites</a>
+                </p>
             </div>
         </div>
 
@@ -615,9 +624,9 @@
     <script src="js/country-states.js"></script>
     <script>
 
-    window.onload = function () {
-        document.getElementById("form-tab").click();
-    };
+        window.onload = function () {
+            document.getElementById("form-tab").click();
+        };
 
 
         var user_country_code = ""; // Default me koi country selected nahi
