--- a/facility-listings.html
+++ b/facility-listings.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Global Care Givers Database</title>
+    <title>Global CareGivers Database</title>
     <link rel="shortcut icon" href="assets/icons/logo.svg" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -215,23 +215,7 @@
         <hr class="mt-4 mb-2">
         <div class="">
             <div class="copyright-section d-flex align-items-center">
-                <p class="font-size">© Copyright 2025 HealthMonitor. All rights reserved</p>
-                <p class="ms-md-auto me-3 font-size">Share on socials</p>
-                <div class="social-media">
-                    <img src="assets/icons/X.svg" alt="img" class="x-share-btn">
-                    <img src="assets/icons/Facebook.svg" alt="img" class="fb-share-btn">
-                    <a href="https://www.instagram.com/">
-                        <img src="assets/icons/Instagram.svg" alt="img">
-                    </a>
-                    <img src="assets/icons/linkedin.svg" alt="img" id="linkedin-share-btn" class="linkedin-share-btn">
-                </div>
-            </div>
-            <div class="develop-by w-25 ms-auto">
-                <p>
-                    Developed by <a href="https://nxtgenwebsites.com/" target="_blank"
-                        class="text-noWrap link-secondary hoverable-link">Nxt
-                        Gen Websites</a>
-                </p>
+                <p class="font-size">(c) 2025, HealthCentre.app, all rights reserved.</p>
             </div>
         </div>
 
