--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Global CareGivers Database</title>
-    <link rel="shortcut icon" href="assets/icons/logo.svg" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/images/logo loading screen.png" type="image/x-icon" />
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/25.2.1/build/css/intlTelInput.min.css"
         integrity="sha512-X3pJz9m4oT4uHCYS6UjxVdWk1yxSJJIJOJMIkf7TjPpb1BzugjiFyHu7WsXQvMMMZTnGUA9Q/GyxxCWNDZpdHA=="
@@ -583,7 +583,7 @@
         <hr class="mt-4 mb-2">
         <div class="">
             <div class="copyright-section d-flex align-items-center">
-                <p class="font-size">(c) 2025, HealthCentre.app, all rights reserved.</p>
+                <p class="font-size">© 2025, HealthCentre.app, all rights reserved.</p>
             </div>
         </div>
 
