--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Global CareGivers Database</title>
-  <link rel="shortcut icon" href="assets/icons/logo.svg" type="image/x-icon" />
+  <link rel="shortcut icon" href="assets/images/logo loading screen.png" type="image/x-icon" />
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/toastr.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -159,7 +159,7 @@
     <hr class="mt-4 mb-2">
         <div class="">
             <div class="copyright-section d-flex align-items-center">
-              <p class="font-size">(c) 2025, HealthCentre.app, all rights reserved.</p>
+              <p class="font-size">© 2025, HealthCentre.app, all rights reserved.</p>
             </div>
         </div>
   </footer>
